--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "mongoose": "^9.1.2"
   },
   "name": "secret-vault-api",
@@ -7,7 +9,6 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
