--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.2"
+    "mongoose": "^9.1.2",
+    "otplib": "^12.0.1"
   },
   "name": "secret-vault-api",
   "version": "1.0.0",
