Mise en place de fonctions utilitaires de la 2FA

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
-    "otplib": "^12.0.1"
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4"
   },
   "name": "secret-vault-api",
   "version": "1.0.0",
